# actions-ai-advisor

./: .gitignore  Dockerfile  LICENSE  PLAN.md  PROJECT_OVERVIEW.md  README.md  RELEASING.md  RENAME_SUMMARY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  design-decisions.md  development.md  language-support.md  llm-integration.md
src/actions_advisor/: config.py  file_parser.py  formatter.py  llm_client.py  log_fetcher.py  main.py  tokens.py
src/actions_ai_advisor/: __init__.py  file_parser.py  formatter.py  llm_client.py  log_fetcher.py  main.py  preprocessor.py  tokens.py
tests/: conftest.py  test_config.py  test_file_parser.py  test_formatter.py  test_llm_client.py  test_log_fetcher.py  test_preprocessor.py  test_tokens.py
